fix: overflow fix

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -8,11 +8,6 @@ html {
     width: 100vw;
     max-width: 100vw;
     min-height: 100vh;
-
-    // responsive to tablet
-    @media only screen and (max-width: $tablet) {
-        overflow-x: hidden;
-    }
 }
 
 // default body styles
